<http://dev.openguides.org/log/trunk>.

0.64
        Correctly specify all build_requires (#245)
        Fix some broken POD (#246)
        Metadata discovery features (action=metadata)
        JSON support for node details and metatdata discovery
        Correctly validate web site URLs during edit and display,
        and truncate URLs that are too long (#21)

0.63    16 August 2008
        Major overhaul of RDF output.
        * Remodelled addresses using WAIL.
          (http://www.eyrie.org/~zednenem/2002/wail/)
        * Include node image as foaf:depiction.
        * Link dc:contributor items in RDF output to actual URIs that exist in
          our system.
        * Replace map XMLNS with dedicated vocabulary.
          (http://downlode.org/Code/RDF/Map/)
        * Replace usage of weakly-modeled and unavailable Wordnet vocabulary 
          for "neighborhood" value with WAIL term.
        * Replace usage of unmodeled and unmaintained ChefMoz vocabulary for 
          opening hours value and replace with Dublin Core "available" term.
        * Replace unnecessary instances of rdf:ID with rdf:nodeID.
        * Model relationship of neighborhood to parent city.
        * Reduce acres of whitespace in output and clean up indenting.
        Added a Universal Edit Link (http://universaleditbutton.org/) (#254)
        Update references to http://openguides.org moved URLs
        Update Google Analytics code to support new version (#255)
        Some pages didn't properly include Google Analyatics; fix this (#257)

0.62    8 June 2008
        Allow wiki page links (simple: [[Foo]], title: [[Foo|bar]]) in
          change summaries.
        Ensure that all modules we ship are versioned.
        Added experimental support for local IP blacklisting modules; see the
          display_node method in "perldoc OpenGuides" for details.
        Don't include redirect pages in search results. (#24)
        Include map link URLs in RDF output. (#26)